--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -36,7 +36,7 @@
 <script>
     $(document).ready(function () {
 
-  var socket = io('http://localhost');
+  var socket = io('/');
  
   socket.on('data', function (data) {
     
