--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -36,7 +36,7 @@
 <script>
     $(document).ready(function () {
 
-  var socket = io('/');
+  var socket = io('https://particle-monitor.herokuapp.com');
  
   socket.on('data', function (data) {
     
