--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -39,7 +39,7 @@
   var socket = io('https://particle-monitor.herokuapp.com');
  
   socket.on('data', function (data) {
-    
+      data.toString()
     console.log(data);
     $('#innerBox').append(data.data);
  
