updated webstie text

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
   
   <main role="main" class="inner cover" >
 <div id="innerBox">
-<p>Number of times button pressed in the lab in the last minute will appear below</p>
+<p>Minute by minute total water flow will appear below</p>
 </div>
 
  
