--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -42,7 +42,7 @@
       console.log(data)
       data.toString()
     console.log(data);
-    let appendIt = '<p>'+data.data+' Liter per minute. Timestamp: '+data+'</p>'
+    let appendIt = '<p>'+data.data+' Liter per minute. Timestamp: '+data.published_at+'</p>'
     $('#innerBox').append(appendIt);
  
 
